// Protos for selecting and configuring plugins for the adaptive load
// controller infrastructure.

syntax = "proto3";

package nighthawk.adaptive_load;

import "google/protobuf/any.proto";

// Selects and configures a StepController plugin, which computes the next load
// amount (e.g. RPS) and checks for convergence to the optimal load, based on
// feedback metrics.
//
// For available plugin names, see step_controller_impl.proto.
message StepControllerConfig {
  // Name used to locate the plugin in the Envoy registry. Required.
  string name = 1;
  // Plugin-specific config. Required.
  google.protobuf.Any typed_config = 2;
}

// Selects and configures a MetricsPlugin, which connects to a platform-specific
// system to obtain metrics for the system under test.
//
// For available plugin names, see metrics_plugin_impl.proto.
message MetricsPluginConfig {
  // Name used to locate the plugin in the Envoy registry. Required.
  string name = 1;
  // Plugin-specific config such as an external API endpoint and credentials.
  // Required.
  google.protobuf.Any typed_config = 2;
}

// Selects and configures a ScoringFunction plugin, which measures proximity to
// a threshold according to an arbitrary formula.
//
// For available plugin names, see scoring_function_impl.proto.
message ScoringFunctionConfig {
  // Name used to locate the plugin in the Envoy registry. Required.
  string name = 1;
  // Plugin-specific config such as thresholds and constants. Required.
  google.protobuf.Any typed_config = 2;
}

// Selects and configures an InputVariableSetter plugin, which encapsulates
// knowledge of how to apply a varying numeric input value to a
// CommandLineOptions proto. For example, RequestsPerSecondInputVariableSetter
// aka "rps" writes the value to the CommandLineOptions |requests_per_second|
// field.
//
// For available plugin names, see input_variable_setter_impl.proto.
message InputVariableSetterConfig {
  // Name used to locate the plugin in the Envoy registry. Required.
  string name = 1;
  // Plugin-specific config. Required.
  google.protobuf.Any typed_config = 2;
}
